--- a/public/css/student_responsive.css
+++ b/public/css/student_responsive.css
@@ -9,6 +9,15 @@
     display: none;
     margin-left: 0 !important;
 }
+.header_category {
+    display: none;
+    margin-left: 0 !important;
+}
+
+.header_category {
+    display: none;
+    margin-left: 0 !important;
+}
 
 .upload_btn {
 	display: none;
@@ -151,6 +160,11 @@
 }
 
 .search120 {
+    display: none;
+    margin-left: 0 !important;
+}
+
+.header_category {
     display: none;
     margin-left: 0 !important;
 }
@@ -328,11 +342,6 @@
 @media (min-width: 768px) and (max-width: 991.98px) {
 .main_logo {
     margin-left: 10px !important;
-}
-
-.search120 {
-    display: none;
-    margin-left: 0 !important;
 }
 
 .value_props {
